# wikigraph_script

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2024-02-18-022202_create_lookup/: down.sql  up.sql
migrations/2024-03-04-033755_create_redirect/: down.sql  up.sql
src/: adj_list_handler.rs  database_handler.rs  file_reader.rs  graph_builder.rs  link_handler.rs  main.rs  models.rs  multipeek.rs  parser.rs  schema.rs  utils.rs
