[package]
name = "wikigraph"
version = "0.1.0"
edition = "2021"
        
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.34"
diesel = {version = "2.1.4", features = ["postgres"]}
dotenv = "0.15.0"
indicatif = "0.17.8"
quick-xml = {version = "0.31.0", features = ["async-tokio"]}
serde = { version = "1.0", features = ["derive"] }

